--- a/cn/quickstart.mdx
+++ b/cn/quickstart.mdx
@@ -1,80 +1,173 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: '快速开始'
+description: '只需简单三步，即可开始使用 Nebula Lab 访问各种 AI 模型'
 ---
 
-## Get started in three steps
+## 第一步：账户准备
 
-Get your documentation site running locally and make your first customization.
+### 1.1 注册账号
 
-### Step 1: Set up your local environment
+访问 [Nebula Lab 官网](https://ai-nebula.com) 注册账号：
+- 使用邮箱注册
+- 验证邮箱地址
+- 登录控制台
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+### 1.2 账户充值
 
-### Step 2: Deploy your changes
-
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
+在控制台进行充值：
+1. 点击"充值"菜单
+2. 选择充值金额
+3. 完成支付（支持支付宝、微信）
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+新用户首次充值可获得额外赠送，充值后余额立即到账
 </Note>
+
+## 第二步：创建 API 密钥
+
+### 2.1 生成密钥
+
+1. 在后台导航点击"令牌"栏目
+2. 可以复制【默认令牌】直接使用
+3. 或者点击"新增"按钮创建新令牌
+
+<Warning>
+保存好您的 API 密钥，密钥只会显示一次
+</Warning>
+
+## 第三步：开始调用
+
+### 3.1 获取接入信息
+
+| 配置项 | 值 |
+|-------|-----|
+| **API 地址（Base URL）** | `https://llm.ai-nebula.com/v1` |
+| **API 密钥** | 您创建的密钥 |
+| **请求格式** | 完全兼容 OpenAI API |
+
+### 3.2 测试调用
+
+使用 curl 快速测试：
+
+```bash
+curl https://llm.ai-nebula.com/v1/chat/completions \
+  -H "Content-Type: application/json" \
+  -H "Authorization: Bearer YOUR_API_KEY" \
+  -d '{
+    "model": "gpt-4o",
+    "messages": [{"role": "user", "content": "Hello!"}]
+  }'
+```
+
+### 3.3 代码示例
+
+<Tabs>
+  <Tab title="Python">
+    ```python
+    from openai import OpenAI
+
+    client = OpenAI(
+        api_key="YOUR_API_KEY",
+        base_url="https://llm.ai-nebula.com/v1"
+    )
+
+    response = client.chat.completions.create(
+        model="gpt-4o",
+        messages=[
+            {"role": "user", "content": "Hello!"}
+        ]
+    )
+
+    print(response.choices[0].message.content)
+    ```
+  </Tab>
+  <Tab title="Node.js">
+    ```javascript
+    import OpenAI from 'openai';
+
+    const openai = new OpenAI({
+      apiKey: 'YOUR_API_KEY',
+      baseURL: 'https://llm.ai-nebula.com/v1'
+    });
+
+    const response = await openai.chat.completions.create({
+      model: 'gpt-4o',
+      messages: [{ role: 'user', content: 'Hello!' }]
+    });
+
+    console.log(response.choices[0].message.content);
+    ```
+  </Tab>
+  <Tab title="Java">
+    ```java
+    OpenAiService service = new OpenAiService(
+        "YOUR_API_KEY", 
+        Duration.ofSeconds(60), 
+        "https://llm.ai-nebula.com/v1"
+    );
+
+    ChatCompletionRequest request = ChatCompletionRequest.builder()
+        .model("gpt-4o")
+        .messages(List.of(
+            new ChatMessage(ChatMessageRole.USER, "Hello!")
+        ))
+        .build();
+
+    ChatCompletionResult result = service.createChatCompletion(request);
+    System.out.println(result.getChoices().get(0).getMessage().getContent());
+    ```
+  </Tab>
+</Tabs>
+
+## 下一步
+
+恭喜！您已经成功完成了 Nebula Lab 的接入。接下来您可以：
+
+<Columns cols={2}>
+  <Card title="查看 API 文档" icon="book" href="/cn/api-reference/introduction">
+    了解完整的 API 接口说明
+  </Card>
+  <Card title="集成到应用" icon="puzzle-piece" href="/cn/integrations/cursor">
+    将 Nebula Lab 集成到各种工具
+  </Card>
+</Columns>
+
+## 常见问题
+
+<AccordionGroup>
+  <Accordion title="如何切换模型？">
+    只需修改请求中的 `model` 参数：
+    ```json
+    {
+      "model": "gpt-4o",
+      "model": "claude-sonnet-4-20250514",
+      "model": "gemini-2.5-pro"
+    }
+    ```
+  </Accordion>
+  <Accordion title="支持哪些编程语言？">
+    Nebula Lab 兼容 OpenAI API 标准，支持所有 OpenAI SDK 支持的语言：
+    - Python
+    - JavaScript/TypeScript
+    - Java
+    - C#/.NET
+    - Go
+    - Ruby
+    - PHP
+  </Accordion>
+  <Accordion title="如何查看余额？">
+    登录控制台即可查看：
+    - 账户余额
+    - 使用记录
+    - 消费统计
+  </Accordion>
+  <Accordion title="遇到问题怎么办？">
+    1. 查看 API 文档
+    2. 检查常见错误
+    3. 联系客服：mla@nebula-data.com
+  </Accordion>
+</AccordionGroup>
+
+<Tip>
+保存好您的 API 密钥，并定期在控制台查看使用日志，合理优化成本。祝使用愉快~
+</Tip>
