--- a/en/quickstart.mdx
+++ b/en/quickstart.mdx
@@ -1,80 +1,173 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: 'Quick Start'
+description: 'Get started with Nebula Lab in just three simple steps'
 ---
 
-## Get started in three steps
+## Step 1: Account Setup
 
-Get your documentation site running locally and make your first customization.
+### 1.1 Register
 
-### Step 1: Set up your local environment
+Visit [Nebula Lab](https://ai-nebula.com) to register:
+- Sign up with email
+- Verify your email address
+- Log in to the console
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+### 1.2 Add Credits
 
-### Step 2: Deploy your changes
-
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
+Top up in the console:
+1. Click "Recharge" menu
+2. Select amount
+3. Complete payment (Alipay, WeChat supported)
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+New users get bonus credits on first top-up
 </Note>
+
+## Step 2: Create API Key
+
+### 2.1 Generate Key
+
+1. Click "Tokens" in the navigation
+2. Copy the default token to use directly
+3. Or click "Add" to create a new token
+
+<Warning>
+Save your API key safely - it will only be shown once
+</Warning>
+
+## Step 3: Start Calling
+
+### 3.1 Connection Info
+
+| Config | Value |
+|--------|-------|
+| **API URL (Base URL)** | `https://llm.ai-nebula.com/v1` |
+| **API Key** | Your created key |
+| **Request Format** | Fully OpenAI API compatible |
+
+### 3.2 Test Call
+
+Quick test with curl:
+
+```bash
+curl https://llm.ai-nebula.com/v1/chat/completions \
+  -H "Content-Type: application/json" \
+  -H "Authorization: Bearer YOUR_API_KEY" \
+  -d '{
+    "model": "gpt-4o",
+    "messages": [{"role": "user", "content": "Hello!"}]
+  }'
+```
+
+### 3.3 Code Examples
+
+<Tabs>
+  <Tab title="Python">
+    ```python
+    from openai import OpenAI
+
+    client = OpenAI(
+        api_key="YOUR_API_KEY",
+        base_url="https://llm.ai-nebula.com/v1"
+    )
+
+    response = client.chat.completions.create(
+        model="gpt-4o",
+        messages=[
+            {"role": "user", "content": "Hello!"}
+        ]
+    )
+
+    print(response.choices[0].message.content)
+    ```
+  </Tab>
+  <Tab title="Node.js">
+    ```javascript
+    import OpenAI from 'openai';
+
+    const openai = new OpenAI({
+      apiKey: 'YOUR_API_KEY',
+      baseURL: 'https://llm.ai-nebula.com/v1'
+    });
+
+    const response = await openai.chat.completions.create({
+      model: 'gpt-4o',
+      messages: [{ role: 'user', content: 'Hello!' }]
+    });
+
+    console.log(response.choices[0].message.content);
+    ```
+  </Tab>
+  <Tab title="Java">
+    ```java
+    OpenAiService service = new OpenAiService(
+        "YOUR_API_KEY", 
+        Duration.ofSeconds(60), 
+        "https://llm.ai-nebula.com/v1"
+    );
+
+    ChatCompletionRequest request = ChatCompletionRequest.builder()
+        .model("gpt-4o")
+        .messages(List.of(
+            new ChatMessage(ChatMessageRole.USER, "Hello!")
+        ))
+        .build();
+
+    ChatCompletionResult result = service.createChatCompletion(request);
+    System.out.println(result.getChoices().get(0).getMessage().getContent());
+    ```
+  </Tab>
+</Tabs>
+
+## Next Steps
+
+Congratulations! You've successfully set up Nebula Lab. Next you can:
+
+<Columns cols={2}>
+  <Card title="View API Docs" icon="book" href="/en/api-reference/introduction">
+    Learn about complete API specifications
+  </Card>
+  <Card title="Integrate with Apps" icon="puzzle-piece" href="/en/integrations/cursor">
+    Integrate Nebula Lab with various tools
+  </Card>
+</Columns>
+
+## FAQ
+
+<AccordionGroup>
+  <Accordion title="How to switch models?">
+    Just change the `model` parameter in your request:
+    ```json
+    {
+      "model": "gpt-4o",
+      "model": "claude-sonnet-4-20250514",
+      "model": "gemini-2.5-pro"
+    }
+    ```
+  </Accordion>
+  <Accordion title="Which programming languages are supported?">
+    Nebula Lab is OpenAI API compatible, supporting all OpenAI SDK languages:
+    - Python
+    - JavaScript/TypeScript
+    - Java
+    - C#/.NET
+    - Go
+    - Ruby
+    - PHP
+  </Accordion>
+  <Accordion title="How to check balance?">
+    Log in to the console to view:
+    - Account balance
+    - Usage history
+    - Consumption statistics
+  </Accordion>
+  <Accordion title="Having issues?">
+    1. Check API documentation
+    2. Review common errors
+    3. Contact support: mla@nebula-data.com
+  </Accordion>
+</AccordionGroup>
+
+<Tip>
+Save your API key safely and regularly check usage logs in the console to optimize costs. Happy coding~
+</Tip>
