--- a/cn/api-reference/endpoint/video-generation.mdx
+++ b/cn/api-reference/endpoint/video-generation.mdx
@@ -1,11 +1,13 @@
 ---
-title: '创建视频生成任务'
+title: '视频生成'
 api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 ---
 
 ## 简介
 
-提交视频生成任务，支持文生视频和图生视频。返回任务 ID，可通过 GET 接口查询任务状态。
+视频生成接口支持文生视频、图生视频等多种功能。通过统一的API接口，您可以调用Sora 2、Veo、阿里万相等多个主流视频生成模型。
+
+**重要提示**：视频生成是异步任务，需要先提交任务获取任务ID，然后轮询查询任务状态直到成功。
 
 ## 认证
 
@@ -16,117 +18,388 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 ## 请求参数
 
 <ParamField body="model" type="string" required>
-  模型名称，如 `sora-2`、`veo-2`
+  模型标识，支持的模型包括：
+  - Sora 2 系列：`sora-2`
+  - Veo 系列：`veo-3.1-generate-preview`、`veo-3.1-fast-generate-preview`、`veo-3.0-generate-preview`、`veo-3.0-fast-generate-001`
+  - 阿里万相系列：`wan2.5-i2v-preview`
 </ParamField>
 
 <ParamField body="prompt" type="string" required>
-  视频描述文本
+  视频生成提示词，描述画面动作和场景
 </ParamField>
 
 <ParamField body="image" type="string">
-  图生视频时的参考图片（base64 或 URL）
+  图生视频时的参考图片（支持 Base64 或 URL 格式）
 </ParamField>
 
 <ParamField body="duration" type="integer" default="5">
-  视频时长（秒），如 5、10、15
+  视频时长（秒），不同模型支持不同时长
 </ParamField>
 
-<ParamField body="resolution" type="string" default="1080p">
-  分辨率：`720p`、`1080p`、`4k`
+<ParamField body="resolution" type="string" default="720p">
+  视频分辨率：`480p`、`720p`、`1080p`、`4k`
 </ParamField>
 
 <ParamField body="aspect_ratio" type="string" default="16:9">
-  宽高比：`16:9`、`9:16`、`1:1`
+  宽高比：`16:9`、`9:16`、`1:1`、`4:3`
 </ParamField>
 
-## cURL 示例
+## 完整示例
 
-```bash
-curl https://llm.ai-nebula.com/v1/video/generations \
-  -H "Content-Type: application/json" \
-  -H "Authorization: Bearer sk-XyLy**************************mIqSt" \
-  -d '{
-    "model": "sora-2",
-    "prompt": "一只猫在草地上奔跑，阳光明媚，电影级画质",
-    "duration": 5,
-    "resolution": "1080p",
-    "aspect_ratio": "16:9"
-  }'
-```
+<Tabs>
+  <Tab title="Sora 2 完整示例">
+    ### 1. 提交视频生成任务
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "sora-2",
+        "prompt": "一只可爱的小猫在花园里玩耍，阳光明媚，画面温馨",
+        "seconds": "4",
+        "size": "720x1280"
+      }'
+    ```
+    
+    **响应示例**：
+    ```json
+    {
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "status": "submitted",
+      "format": "mp4"
+    }
+    ```
+    
+    ### 2. 轮询查询任务状态
+    
+    ```bash
+    curl -X GET "https://llm.ai-nebula.com/v1/video/generations/video_69095b4ce0048190893a01510c0c98b0" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx"
+    ```
+    
+    **任务状态说明**：
+    
+    | 状态 | 说明 | 建议操作 |
+    |------|------|----------|
+    | `queued` | 任务已排队，等待处理 | 继续轮询 |
+    | `in_progress` | 任务正在处理中 | 继续轮询 |
+    | `succeeded` | 任务成功完成 | 下载视频 |
+    | `failed` | 任务失败 | 查看失败原因 |
+    
+    **响应示例（已完成）**：
+    ```json
+    {
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "status": "succeeded",
+      "format": "mp4",
+      "url": "https://dashscope-result-sh.oss-cn-shanghai.aliyuncs.com/.../video.mp4?Expires=..."
+    }
+    ```
+    
+    ### 3. 下载视频（Sora 2 特有）
+    
+    ```bash
+    curl -X GET "https://dashscope-result-sh.oss-cn-shanghai.aliyuncs.com/.../video.mp4?Expires=..." \
+      -o "generated_video.mp4"
+    ```
+  </Tab>
+  
+  <Tab title="Veo 完整示例">
+    ### 1. 提交视频生成任务
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "veo-3.1-generate-preview",
+        "prompt": "科幻城市的清晨航拍，阳光穿过云层",
+        "durationSeconds": 8,
+        "aspectRatio": "16:9",
+        "resolution": "1080p",
+        "generateAudio": true,
+        "image": "https://example.com/start-frame.png",
+        "lastFrame": "https://example.com/end-frame.png"
+      }'
+    ```
+    
+    **响应示例**：
+    ```json
+    {
+      "task_id": "video_1234567890abcdef",
+      "status": "submitted",
+      "format": "mp4"
+    }
+    ```
+    
+    ### 2. 轮询查询任务状态
+    
+    ```bash
+    curl -X GET "https://llm.ai-nebula.com/v1/video/generations/video_1234567890abcdef" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx"
+    ```
+    
+    **响应示例（已完成）**：
+    ```json
+    {
+      "task_id": "video_1234567890abcdef",
+      "status": "succeeded",
+      "format": "mp4",
+      "url": "https://nebula-ads.oss-cn-guangzhou.aliyuncs.com/2025/11/18/abc123/veo-demo-1.mp4"
+    }
+    ```
+    
+    **注意**：Veo 和阿里万相在任务成功后，视频URL直接包含在响应中，无需额外下载步骤。
+  </Tab>
+  
+  <Tab title="阿里万相完整示例">
+    ### 1. 提交视频生成任务
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "wan2.5-i2v-preview",
+        "prompt": "小猫缓缓睁开眼睛，耳朵轻轻抖动，镜头缓推拉近",
+        "image": "https://example.com/cat.jpg",
+        "duration": 5,
+        "resolution": "720p",
+        "smart_rewrite": true,
+        "generate_audio": true
+      }'
+    ```
+    
+    **响应示例**：
+    ```json
+    {
+      "task_id": "ae8eb420-8aa6-440a-8eb8-1d1afe8d5e97",
+      "status": "submitted",
+      "format": "mp4"
+    }
+    ```
+    
+    ### 2. 轮询查询任务状态
+    
+    ```bash
+    curl -X GET "https://llm.ai-nebula.com/v1/video/generations/ae8eb420-8aa6-440a-8eb8-1d1afe8d5e97" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx"
+    ```
+    
+    **响应示例（已完成）**：
+    ```json
+    {
+      "task_id": "ae8eb420-8aa6-440a-8eb8-1d1afe8d5e97",
+      "status": "succeeded",
+      "format": "mp4",
+      "url": "https://dashscope-result-sh.oss-cn-shanghai.aliyuncs.com/.../video.mp4?Expires=..."
+    }
+    ```
+  </Tab>
+</Tabs>
 
-## Python 示例
+## 支持的模型
 
-```python
-import requests
+### Sora 2 系列
 
-url = "https://llm.ai-nebula.com/v1/video/generations"
-headers = {
-    "Authorization": "Bearer sk-XyLy**************************mIqSt",
-    "Content-Type": "application/json"
-}
+**模型名称**: `sora-2`
 
-data = {
-    "model": "sora-2",
-    "prompt": "一只猫在草地上奔跑，阳光明媚，电影级画质",
-    "duration": 5,
-    "resolution": "1080p",
-    "aspect_ratio": "16:9"
-}
+**核心能力**:
+- ✅ 文生视频（纯文本描述生成视频）
+- ✅ 图生视频（单图片+文本生成视频）
+- ✅ Remix 模式（基于已有视频重新生成）
 
-response = requests.post(url, headers=headers, json=data)
-task = response.json()
-print(f"任务ID: {task['id']}")
-```
+**支持参数**:
+- `seconds`: 视频时长（4、8、12秒）
+- `size`: 视频分辨率（720x1280、1280x720）
+- `input_reference`: 参考图片（URL 或 Base64）
+- `remix_from_video_id`: 基于已有视频ID重新生成
 
-<ResponseExample>
-```json
-{
-  "id": "video_task_abc123",
-  "object": "video.generation",
-  "status": "pending",
-  "model": "sora-2",
-  "created": 1234567890,
-  "prompt": "一只猫在草地上奔跑，阳光明媚，电影级画质",
-  "duration": 5,
-  "resolution": "1080p",
-  "aspect_ratio": "16:9"
-}
-```
-</ResponseExample>
+### Veo 系列
 
-## 图生视频示例
+**模型名称**: `veo-3.1-generate-preview`、`veo-3.1-fast-generate-preview`、`veo-3.0-generate-preview`、`veo-3.0-fast-generate-001`
 
-```python
-import base64
+**核心能力**:
+- ✅ 文生视频
+- ✅ 图生视频（支持首帧和尾帧约束）
+- ✅ 音频生成
 
-with open("reference.jpg", "rb") as f:
-    image_base64 = base64.b64encode(f.read()).decode()
+**支持参数**:
+- `durationSeconds`: 视频时长（4、6、8秒）
+- `aspectRatio`: 宽高比（16:9、9:16）
+- `resolution`: 分辨率（720p、1080p）
+- `generateAudio`: 是否生成音频
+- `image`: 首帧参考图
+- `lastFrame`: 尾帧参考图
+- `seed`: 随机种子
 
-data = {
-    "model": "sora-2",
-    "prompt": "让图片中的人物动起来，微笑并挥手",
-    "image": f"data:image/jpeg;base64,{image_base64}",
-    "duration": 5
-}
 
-response = requests.post(url, headers=headers, json=data)
-```
 
-## 任务状态
+### 阿里万相系列
 
-| 状态 | 说明 |
-|------|------|
-| `pending` | 排队中 |
-| `processing` | 生成中 |
-| `completed` | 已完成 |
-| `failed` | 失败 |
+**模型名称**: `wan2.5-i2v-preview`
 
-## 注意事项
+**核心能力**:
+- ✅ 图生视频（Image-to-Video）
+- ✅ 支持自定义音频上传
+- ✅ 智能提示词扩写
+- ✅ 自动生成画面同步音频
 
-<Note>
-- 视频生成为异步任务，提交后需轮询查询状态
-- 生成时间取决于时长和分辨率，通常 1-5 分钟
-- 完成后通过返回的 URL 下载视频
-- 依赖 `requests` 库：`pip install requests`
-</Note>
+**支持参数**:
+- `duration`: 视频时长（5、10秒）
+- `resolution`: 视频分辨率（480p、720p、1080p）
+- `smart_rewrite`: 是否启用智能提示词扩写
+- `generate_audio`: 是否生成与画面同步的音频
+- `audio_url`: 自定义音频文件URL
+- `seed`: 随机种子
+
+
+
+## 最佳实践
+
+### 轮询策略
+
+<Tabs>
+  <Tab title="Python 轮询示例">
+    ```python
+    import requests
+    import time
+    
+    def poll_task_status(task_id, api_key, max_wait_time=300):
+        """轮询任务状态直到完成"""
+        url = f"https://llm.ai-nebula.com/v1/video/generations/{task_id}"
+        headers = {"Authorization": f"Bearer {api_key}"}
+        
+        start_time = time.time()
+        while True:
+            response = requests.get(url, headers=headers)
+            data = response.json()
+            status = data.get("status")
+            
+            print(f"当前状态: {status}")
+            
+            if status == "succeeded":
+                video_url = data.get("url")
+                print(f"✅ 任务完成！视频URL: {video_url}")
+                return video_url
+            elif status == "failed":
+                error_msg = data.get("metadata", {}).get("output", {}).get("message", "未知错误")
+                print(f"❌ 任务失败: {error_msg}")
+                return None
+            
+            # 检查超时
+            if time.time() - start_time > max_wait_time:
+                print("⏰ 等待超时")
+                return None
+            
+            # 等待5秒后再次查询
+            time.sleep(5)
+    ```
+  </Tab>
+  
+  <Tab title="JavaScript 轮询示例">
+    ```javascript
+    async function pollTaskStatus(taskId, apiKey, maxWaitTime = 300000) {
+      const url = `https://llm.ai-nebula.com/v1/video/generations/${taskId}`;
+      const headers = { 'Authorization': `Bearer ${apiKey}` };
+      
+      const startTime = Date.now();
+      
+      while (true) {
+        const response = await fetch(url, { headers });
+        const data = await response.json();
+        const status = data.status;
+        
+        console.log(`当前状态: ${status}`);
+        
+        if (status === 'succeeded') {
+          const videoUrl = data.url;
+          console.log(`✅ 任务完成！视频URL: ${videoUrl}`);
+          return videoUrl;
+        } else if (status === 'failed') {
+          const errorMsg = data.metadata?.output?.message || '未知错误';
+          console.error(`❌ 任务失败: ${errorMsg}`);
+          throw new Error(errorMsg);
+        }
+        
+        // 检查超时
+        if (Date.now() - startTime > maxWaitTime) {
+          throw new Error('等待超时');
+        }
+        
+        // 等待5秒后再次查询
+        await new Promise(resolve => setTimeout(resolve, 5000));
+      }
+    }
+    ```
+  </Tab>
+</Tabs>
+
+## 常见问题
+
+<Tabs>
+  <Tab title="通用问题">
+    <AccordionGroup>
+      <Accordion title="视频生成需要多长时间？">
+        通常需要 1-5 分钟，具体取决于视频时长、分辨率和服务器负载。
+      </Accordion>
+      
+      <Accordion title="生成的视频有效期是多久？">
+        视频URL的有效期约为24小时。建议在收到响应后立即下载保存。
+      </Accordion>
+      
+      <Accordion title="支持哪些图片输入格式？">
+        支持 PNG、JPEG、JPG、WEBP 格式，最大文件大小 10MB。
+      </Accordion>
+    </AccordionGroup>
+  </Tab>
+  
+  <Tab title="Sora 2">
+    <AccordionGroup>
+      <Accordion title="为什么Sora 2需要额外下载步骤？">
+        Sora 2 的视频文件存储在独立的存储服务中，任务成功后返回的是带签名的临时URL，需要额外下载。
+      </Accordion>
+      
+      <Accordion title="支持哪些视频时长？">
+        支持 4秒、8秒、12秒三种时长。
+      </Accordion>
+    </AccordionGroup>
+  </Tab>
+  
+  <Tab title="Veo">
+    <AccordionGroup>
+      <Accordion title="支持哪些视频时长？">
+        支持 4秒、6秒、8秒三种时长。
+      </Accordion>
+      
+      <Accordion title="如何生成音频？">
+        设置 `generateAudio: true` 参数，系统会自动生成与画面同步的音频。
+      </Accordion>
+    </AccordionGroup>
+  </Tab>
+  
+  <Tab title="阿里万相">
+    <AccordionGroup>
+      <Accordion title="支持哪些视频时长？">
+        支持 5秒 和 10秒 两种时长。
+      </Accordion>
+      
+      <Accordion title="如何上传自定义音频？">
+        提供 `audio_url` 参数，指向可公开访问的音频文件URL。
+      </Accordion>
+    </AccordionGroup>
+  </Tab>
+</Tabs>
+
+## 相关资源
+
+<Columns cols={2}>
+  <Card title="图片生成" icon="image" href="/cn/api-reference/endpoint/image-generation">
+    查看图片生成接口文档
+  </Card>
+  <Card title="模型列表" icon="list" href="/cn/api-reference/models">
+    查看所有支持的模型信息
+  </Card>
+</Columns>
 
